*** netmeta, version 6.6-6, 6666-06-06 ***

 ** Major changes **

  * Treatment separators (argument 'sep.trts') can be special
    characters from regular expressions

 ** Internal changes **

  * new internal functions compmatch() and compsplit() for argument
    'sep.trts' taking special characters from regular expressions into
    account, e.g., sep.trts = "."


*** netmeta, version 0.9-7, 2017-12-06 ***

 ** Major changes **

  * Version of R package meta must be larger or equal 4.9-0

  * New function to produce forest plots with network, direct, and
    indirect evidence

  * New function to estimate additive network meta-analysis for
    combinations of treatments

  * New default in function netsplit(): treatment comparisons are
    selected from upper treatment estimates matrix, i.e., comparisons
    are "A vs B", "A vs C", and "B vs C" for treatments "A", "B", and
    "C" instead of "B vs A", etc.

  * Zero treatment arm variance in multi-arm studies results in a
    warning instead of an error message

  * League tables can be exported as CSV or Excel file

  * New argument 'backtransf' indicating whether estimates should be
    back-transformed in printouts and plots, e.g., to show results as
    odds ratios instead of log odds ratios

  * P-values can be printed in scientific notation

  * P-values equal to 0 are actually printed as "0" instead of
    "< 0.0001"

  * Thousands separator can be used in printouts and forest plots for
    large numbers

 ** User-visible changes **

  * new functions:
    - forest.netsplit() to produce forest plots with direct and
      indirect evidence
    - print.netleague() to print league table
    - treats() to create uniquely abbreviated treatment names
    - netcomb() and netcomb.netmeta() to estimate additive network
      meta-analysis models for combinations of treatments   
    - summary.netcomb(), print.netcomb(), and print.summary.netcomb()
      to print (summaries of) netcomb objects
